new hugo.yaml action

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = '/'
 languageCode = 'cs-cz'
-title = 'deník'
+title = 'Deník ✏️'
 theme = 'ananke'
 canonifyURLs = true
 DefaultContentLanguage = 'cs'
